--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http: ^0.13.5
   camera: ^0.10.3 
 
   # The following adds the Cupertino Icons font to your application.
