--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  camera: ^0.10.3 
+  camera: ^0.10.3
+  percent_indicator: ^4.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
