--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   camera: ^0.10.3
   percent_indicator: ^4.2.2
   http: ^0.13.5
+  image_picker: ^0.8.6+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
